k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idempotency-service
  labels:
    app: idempotency-service
spec:
  type: ClusterIP
  selector:
    app: idempotency-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
